move repl code to stdlib

--- a/repl.mw
+++ b/repl.mw
@@ -1,12 +1,3 @@
 include stdlib.mw
 
-:: eval_line pure
- local code = parse(pop())
- local i = table.getn(code)
- while i>0 do
-  unget_word(code[i])
-  i = i - 1
- end
-;;
-
-: repl read_line eval_line repl ;
+repl
