--- a/stdlib.mw
+++ b/stdlib.mw
@@ -177,3 +177,14 @@
  local line = io.stdin:read()
  push(line)
 ;;
+
+:: eval_line pure
+ local code = parse(pop())
+ local i = table.getn(code)
+ while i>0 do
+  unget_word(code[i])
+  i = i - 1
+ end
+;;
+
+: repl read_line eval_line repl ;
