I don't want to sell 10 different files to customers, here's a way to bundle it all as a single file

--- a/stdlib.mw
+++ b/stdlib.mw
@@ -188,3 +188,12 @@
 ;;
 
 : repl read_line eval_line repl ;
+
+:: crash skip
+	if os.exit then
+		os.exit()
+	else
+		os.queueEvent("terminate")
+		sleep(1)
+	end
+;;
